chore: logging for elk